--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "homepage": "https://github.com/domino54/galaxybot#readme",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "fb": "^2.0.0",
     "js-yaml": "^3.10.0",
     "node-opus": "^0.2.7",
     "querystring": "^0.2.0",
+    "windows-build-tools": "^1.3.2",
     "youtube-search": "^1.0.10",
     "ytdl-core": "^0.18.1"
   }
