Multiple behaviour additions and features.
* Bot logs saved to a `logs.txt` file.
* Cycle through random statuses set in `config.yml`.
* Store managers roles as array of snowflakes, instead of a `String`.
* Ability to play music from server storage, available to the bot owner only.
* Detailed error messages upon track creation failure.
*  `!guilds` command available to everyone, limited to showing the number of active guilds only.
* Word filter option, customizable per guild, removing messages, reactions and nicknames containing listed words.
* Empathy system for users with expanded text responses.
* `!limitaccess` command for music player restrictions.
* Option to toggle on/off feature, which makes fun of idiots using the :joy: emoji.
* Option to disable all proprogrammed text responses in a guild.
* Removed `compose()` method, which was the main cause of crashes in multiple situations.
* Fixed not working `Boolean` settings and incorrect settings display.
* Fixed a few crashes, including sending multiple MX links.
* Fixed YouTube playback.

--- a/config.default.yml
+++ b/config.default.yml
@@ -10,13 +10,26 @@ facebook:
   appid:  your_application_id
   secret: your_application_secret
 
+logfile:  log.txt
+
+statuses:
+  - "a game"
+
+filter:
+  min:    2
+  max:    20
+  count:  25
+
 settings:
-  prefix:         '!'
+  prefix:         "!"
   embed-mx:       true
   embed-titles:   true
   embed-maps:     true
-  roles:          GalaxyBot
   max-duration:   600
   unit-convert:   false
-  music-cmd-ch:   []
   stalk-edits:    false
+  limit-access:   false
+  enable-filter:  true
+  filter-admins:  false
+  text-responses: true
+  mocking-joy:    true
