--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/domino54/galaxybot#readme",
   "dependencies": {
-    "discord.js": "^11.2.1",
+    "discord.js": "^11.3.0",
     "fb": "^2.0.0",
     "js-yaml": "^3.10.0",
+    "music-metadata": "^0.9.5",
     "node-opus": "^0.2.7",
     "querystring": "^0.2.0",
     "youtube-search": "^1.0.10",
-    "ytdl-core": "^0.18.7"
+    "ytdl-core": "^0.20.2"
   }
 }
