--- a/config.default.yml
+++ b/config.default.yml
@@ -1,5 +1,8 @@
 dommy:    99612832353505280
 
+version:  "0.9.0"
+vdate:    "2018-03-18"
+
 discord:
   token:  your_token_here
 
@@ -14,6 +17,10 @@ logfile:  log.txt
 
 statuses:
   - "a game"
+
+mpstatus:
+  interval:   60000
+  timeout:    30000
 
 filter:
   min:    2
