YT, Purge and code improvements
* `yt` command for explicit YouTube search for music player.
* `purge` command for quick messages removal.
* `undo` accepts number and `all` attributes for multiple tracks removal.
* Added YouTube playlists support to the play command.
* Fix problem of tracks being skipped instantly when multiple are requested before bot joins the voice channel.
* Genuine command runtime error handling.
* Create stream when track is about to be played, rather than when it's requested.
* Organized some more methods in proper files.
* More crash fixes and typos corrected.

--- a/config.default.yml
+++ b/config.default.yml
@@ -1,19 +1,20 @@
-dommy:    99612832353505280
+version:  "0.9.3"
+vdate:    "2018-03-21"
 
-version:  "0.9.0"
-vdate:    "2018-03-18"
+logfile:  log.txt
+github:   https://github.com/domino54/galaxybot
+dommy:    99612832353505280
 
 discord:
   token:  your_token_here
 
 youtube:
-  token:  your_token_here
+  token:        your_token_here
+  maxplaylist:  100
 
 facebook:
   appid:  your_application_id
   secret: your_application_secret
-
-logfile:  log.txt
 
 statuses:
   - "a game"
