--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "music-metadata": "^0.9.8",
     "node-opus": "^0.2.7",
     "querystring": "^0.2.0",
+    "youtube-dl": "^1.12.2",
     "youtube-playlist-info": "^1.1.2",
     "youtube-search": "^1.0.10",
     "ytdl-core": "^0.20.2"
