Fancy server browsers, `playing` and `oldest` commands
* `servers` command will create a server browser, if there are enough servers listed.
* `playing` - shows the number of users seen by the bot, playing the given game.
* `oldest` - create a Markdown table with users, ordered by server join time.
* `avatar`, `purge` and `user` use new, better guild member finding method.
* Prevent the same user from requesting multiple playlist at the same time.

--- a/config.default.yml
+++ b/config.default.yml
@@ -1,6 +1,7 @@
-logfile:  log.txt
-dommy:    99612832353505280
-maxqueue: 1000
+logfile:      log.txt
+dommy:        99612832353505280
+maxqueue:     1000
+maxbrowsers:  10
 
 discord:
   token:  your_token_here
