--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "galaxybot",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "description": "A Discord bot capable of playing some music and doing other stuff. Pretty cute, too.",
   "main": "index.js",
   "scripts": {
@@ -27,12 +27,13 @@
     "discord.js": "^11.3.2",
     "fb": "^2.0.0",
     "html-markdown": "^1.0.17",
-    "jsdom": "^11.10.0",
-    "music-metadata": "^1.0.0",
-    "node-opus": "^0.3.0",
+    "js-yaml": "^3.12.0",
+    "jsdom": "^11.11.0",
+    "music-metadata": "^1.1.0",
+    "node-opus": "^0.3.1",
     "youtube-dl": "^1.12.2",
     "youtube-playlist-info": "^1.1.2",
-    "youtube-search": "^1.1.0",
+    "youtube-search": "^1.1.3",
     "ytdl-core": "^0.20.4"
   }
 }
