--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "galaxybot",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "A Discord bot capable of playing some music and doing other stuff. Pretty cute, too.",
   "main": "index.js",
   "scripts": {
@@ -24,17 +24,20 @@
   },
   "homepage": "https://github.com/domino54/galaxybot#readme",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "faceapp": "^0.4.6",
+    "bbcode-to-markdown": "^1.0.1",
+    "discord.js": "^11.4.2",
+    "faceapp": "^0.4.7",
     "fb": "^2.0.0",
     "html-markdown": "^1.0.17",
-    "js-yaml": "^3.12.0",
+    "js-yaml": "^3.13.1",
     "jsdom": "^11.11.0",
     "music-metadata": "^1.1.0",
     "node-opus": "^0.3.1",
-    "youtube-dl": "^1.12.2",
+    "speech-to-text": "^2.9.1",
+    "string-similarity": "^3.0.0",
+    "youtube-dl": "^1.13.1",
     "youtube-playlist-info": "^1.1.2",
-    "youtube-search": "^1.1.3",
+    "youtube-search": "^1.1.4",
     "ytdl-core": "^0.20.4"
   }
 }
